# scrolling-compilation-maker

./: .gitignore  CLAUDE.md  Cargo.toml  config.example.toml
docs/superpowers/plans/: 2026-04-12-config-and-interactive-mode.md
docs/superpowers/specs/: 2026-04-12-config-and-interactive-mode-design.md
src/: api.rs  cli.rs  config.rs  download.rs  ffmpeg.rs  interactive.rs  main.rs  run_params.rs  song.rs  source.rs  types.rs
src/source/: alexandria.rs
