[package]
name = "scrolling-compilation-maker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
futures = "0.3"
indicatif = "0.17"
inquire = "0.9.4"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1", features = ["serde"] }
